--- a/config/locales/en.json
+++ b/config/locales/en.json
@@ -1,4 +1,7 @@
 {
-  "Welcome": "Welcome",
-  "A brand new app.": "A brand new app."
+	"Welcome": "Welcome",
+	"A brand new app.": "A brand new app.",
+	"Sale-Api": "Sale-Api",
+	"My Town Api": "My Town Api",
+	"My Town": "My Town"
 }
